// proto to c# mappings
// https://learn.microsoft.com/en-us/aspnet/core/grpc/protobuf?view=aspnetcore-7.0

syntax = "proto3";

package GreeterProtos;

message HelloRequest {
}

message HelloResponse {
    int32 ProcessId = 1;
    bool IsToolBarVisible = 2;
}

service GreetingService {
    rpc Greeting(HelloRequest) returns (HelloResponse);
}
